--- a/source/_posts/C2.md
+++ b/source/_posts/C2.md
@@ -1,3 +1,8 @@
+---
+title: C2
+date: 2025-04-08
+---
+
 # C2基础
 ## 什么是 C2 框架
 C2（Command & Control）框架是攻击链中控制阶段的核心部分，用于红队与植入目标主机的木马（Agent/Beacon）之间建立通信，执行命令、收集信息、上传下载文件、做横向移动等等。C2 框架的本质是一套包含控制端（Server）与客户端（Payload/Beacon）的通信系统。
