chore: download images to local

--- a/source/_posts/操作系统.md
+++ b/source/_posts/操作系统.md
@@ -275,7 +275,7 @@ socket有多种不同类型，比如常见的`ip:port`是网络套接字
 
 分段常用于早期操作系统或嵌入式系统，在现代系统中通常结合分页一起使用。
 
-![](https://cdn.nlark.com/yuque/0/2025/png/22226417/1744796674197-5bc113a6-e168-4e5f-8cfa-24e10af5889c.png)
+![](/blog_imgs/操作系统/1744796674197-5bc113a6-e168-4e5f-8cfa-24e10af5889c.png)
 
 ---
 
