feat: add deployment workflow and desensitization script, add Git.md

--- a/source/_posts/操作系统.md
+++ b/source/_posts/操作系统.md
@@ -406,7 +406,7 @@ socket有多种不同类型，比如常见的`ip:port`是网络套接字
 ### 树形目录结构（现代系统通用）
 支持多层嵌套子目录，灵活且可扩展。路径分为：
 
-+ **绝对路径**：从根目录 `/` 开始，如 `/home/user/docs`
++ **绝对路径**：从根目录 `/` 开始，如 `/home/user***/docs`
 + **相对路径**：基于当前目录，如 `../images`
 
 ---
